frontend/test/should_pass/pattern_015.grg
pattern Foo
{
	x: Node;
	
	modify bla
	{
	}
	modify blub
	{
	}
}