frontend/test/should_fail/alternative_006.grg
test alttest
{
    alternative
    {
        alt1
        {
            modify {
                x;  // x is undeclared
            }
        }
        alt2
        {
            x:Node;
        }
    }
}
